--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MYKD -eSports and Gaming NFT Theme</title>
-    <link rel="stylesheet" href="/assets/styles/global.css" />
+    <link rel="stylesheet" href="../assets/styles/global.css" />
 
     <link
       rel="stylesheet"
@@ -47,7 +47,7 @@
       <path d="M8.5 5H4l5 7-5 7h4.5l5-7z"></path>
     </svg>
     <header></header>
-    <script src="/assets/scripts/header.js"></script>
+    <script src="../assets/scripts/header.js"></script>
     <main data-barba="container">
       <script>
         const current = document.querySelectorAll(".main-menu li");
@@ -58,7 +58,7 @@
 
         document.querySelectorAll(".main-menu li")[3].classList.add("current");
       </script>
-      <link rel="stylesheet" href="/assets/styles/About/style.css" />
+      <link rel="stylesheet" href="../assets/styles/About/style.css" />
       <section class="main-area">
         <div class="header">
           <h1>ABOUT US</h1>
@@ -222,9 +222,9 @@
       </div>
     </div>
     <div class="cursor"></div>
-    <script src="/assets/scripts/scripts.js"></script>
+    <script src="../assets/scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://unpkg.com/@barba/core"></script>
-    <script src="/assets/scripts/transition.js"></script>
+    <script src="../assets/scripts/transition.js"></script>
   </body>
 </html>
