--- a/index-2.html
+++ b/index-2.html
@@ -48,7 +48,7 @@
     </svg>
     <header></header>
     <script src="assets/scripts/header.js"></script>
-    <main data-barba="container">
+    <main data-barba="container" data-barba-namespace="hometwo">
       <link rel="stylesheet" href="/assets/styles/Hometwo/style.css" />
       <section class="main-area">
         <div class="texts">
