--- a/pages/about.html
+++ b/pages/about.html
@@ -54,7 +54,7 @@
         <div class="header">
           <h1>ABOUT US</h1>
           <span class="white bold">
-            <span class="green">Home</span> > ABOUT US
+            <span class="green">Home</span> ABOUT US
           </span>
         </div>
         <img
