--- a/pages/about.html
+++ b/pages/about.html
@@ -80,7 +80,7 @@
             alt=""
             class="right"
           />
-          <div class="about__dots">
+         <!--  <div class="about__dots">
             <svg
               width="109"
               height="35"
@@ -111,7 +111,7 @@
               <path d="M95 28H86V35H95V28Z" fill="currentcolor"></path>
               <path d="M109 28H100V35H109V28Z" fill="currentcolor"></path>
             </svg>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
