--- a/pages/contact.html
+++ b/pages/contact.html
@@ -49,7 +49,7 @@
     <header></header>
     <script src="../assets/scripts/header.js"></script>
     <main data-barba="container" data-barba-namespace="contact">
-      <link rel="stylesheet" href="../assets/styles/About/style.css" />
+      <link rel="stylesheet" href="../assets/styles/Contact/style.css" />
       <section class="main-area">
         <div class="header">
           <h1>Contact US</h1>
@@ -57,6 +57,28 @@
             <span class="green">Home</span> CONTACT US
           </span>
         </div>
+      </section>
+      <section class="form">
+        <div class="texts">
+            <h2>CONTACT US AND FIND YOUR mykd</h2>
+            <p>Axcepteur sint occaecat atat non proident, sunt culpa officia deserunt mollit anim id est labor umLor emdolor</p>
+            <h3>information</h3>
+            <ul>
+                <li>+971 333 222 557</li>
+                <li>info@exemple.com</li>
+                <li>New Central Park W7 Street, New York</li>
+            </ul>
+        </div>
+        <form>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea placeholder="Enter Your Message"></textarea>
+            <button>SEND MESSAGE</button>
+        </form>
+        
+      </section>
+      <section class="contact-app">
+        <iframe src="https://geo-devrel-javascript-samples.web.app/samples/style-array/app/dist/" allowfullscreen="" loading="lazy"></iframe>
       </section>
     </main>
     <footer>
