Right Header Fixed

--- a/pages/about.html
+++ b/pages/about.html
@@ -125,6 +125,20 @@
         </div>
 
       </section>
+      <section class="services-area">
+        <div class="texts">
+          <div class="header-text">
+            <h5>powerful services</h5>
+            <h2>Our Powerful Services Done on time</h2>
+          </div>
+        </div>
+        <div class="images">
+          <img class="deactive" src="https://themedox.com/demo/mykd/assets/img/others/services_img01.jpg" alt="">
+          <img class="deactive" src="https://themedox.com/demo/mykd/assets/img/others/services_img02.jpg" alt="">
+          <img class="deactive" src="https://themedox.com/demo/mykd/assets/img/others/services_img03.jpg" alt="">
+          <img class="deactive" src="https://themedox.com/demo/mykd/assets/img/others/services_img04.jpg" alt="">
+        </div>
+      </section>
     </main>
     <footer>
       <div class="bigfooter">
