--- a/pages/contact.html
+++ b/pages/contact.html
@@ -73,7 +73,7 @@
             <input type="text" placeholder="Your Name">
             <input type="email" placeholder="Your Email">
             <textarea placeholder="Enter Your Message"></textarea>
-            <button>SEND MESSAGE</button>
+            <input type="submit" value="SEND MESSAGE">
         </form>
         
       </section>
