Remove Sounds added

--- a/index-2.html
+++ b/index-2.html
@@ -56,7 +56,7 @@
           <h2>video games online</h2>
           <div class="button button-green">
             <a
-              href="https://themedox.com/mykd/my-account/"
+              href="/pages/contact.html"
               class="tg-border-btn"
             >
               <svg preserveAspectRatio="none" viewBox="0 0 157 48">
