--- a/pages/about.html
+++ b/pages/about.html
@@ -125,7 +125,7 @@
         </div>
 
       </section>
-      <section class="services-area">
+<!--       <section class="services-area">
         <div class="texts">
           <div class="header-text">
             <h5>powerful services</h5>
@@ -138,7 +138,44 @@
           <img class="deactive" src="https://themedox.com/demo/mykd/assets/img/others/services_img03.jpg" alt="">
           <img class="deactive" src="https://themedox.com/demo/mykd/assets/img/others/services_img04.jpg" alt="">
         </div>
-      </section>
+      </section> -->
+      <section class="users">
+        <div class="text">
+            <span>our team member</span>
+            <h3>ACTIVE TEAM MEMBERS</h3>
+        </div>
+        <div class="users-grup">
+            <div class="user">
+                <img src="https://themedox.com/demo/mykd/assets/img/team/team01.png" alt="">
+                <div class="user-about">
+                    <h4>KILLER MASTER</h4>
+                    <span class="subtitle">Blockchain Expert</span>
+                </div>
+            </div>
+            <div class="user">
+                <img src="https://themedox.com/demo/mykd/assets/img/team/team02.png" alt="">
+                <div class="user-about">
+                    <h4>TANU MARK</h4>
+                    <span class="subtitle">Developer</span>
+                </div>
+            </div>
+            <div class="user">
+                <img src="https://themedox.com/demo/mykd/assets/img/team/team03.png" alt="">
+                <div class="user-about">
+                    <h4>THOMPSON SCOT</h4>
+                    <span class="subtitle">Art Director</span>
+                </div>
+            </div>
+            <div class="user">
+                <img src="https://themedox.com/demo/mykd/assets/img/team/team04.png" alt="">
+                <div class="user-about">
+                    <h4>SHAKH DANIAL</h4>
+                    <span class="subtitle">Crypto Advisor</span>
+                </div>
+            </div>
+            
+        </div>
+    </section>
     </main>
     <footer>
       <div class="bigfooter">
