--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         <h1>steaming</h1>
                         <h2>video games online</h2>
                         <div class="button button-green">
-                            <a href="https://themedox.com/mykd/my-account/" class="tg-border-btn">
+                            <a href="/pages/contact.html" class="tg-border-btn">
                                 <svg preserveAspectRatio="none" viewBox="0 0 157 48" >
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M131.75 2L155.75 25L131.75 47L148.75 24L131.75 2Z" fill="white"></path>
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M25 1L1 24.5111L25 47L8 23.4889L25 1Z" fill="white"></path>
